# ztm-15-projects

./: README.md
cat/src/: lib.rs  main.rs
cli-utils/cat/: Cargo.toml  test1.txt
cli-utils/echo/: Cargo.toml
cli-utils/echo/src/: lib.rs  main.rs
cli-utils/find/src/: lib.rs  (+1 more)
cli-utils/ls/: Cargo.toml
definitely-not-rink/: Cargo.toml
definitely-not-rink/definitely-not-rink-macro/: Cargo.toml
definitely-not-rink/src/: core.rs  lib.rs  main.rs  temperature.rs  time.rs
find/: Cargo.toml
find/src/: lib.rs
grep/: Cargo.toml
grep/src/: lib.rs
ls/: Cargo.toml
ls/src/: lib.rs
metered-api-server/: Cargo.toml
metered-api-server-2/: Cargo.toml
metered-api-server-2/migrations/: 20250127233436_create_api_keys_table.sql  20250129175947_create_api_requests_table.sql
metered-api-server-2/src/: data.rs  db.rs  handlers.rs  lib.rs  main.rs  services.rs
metered-api-server-2/src/api/: api_state.rs  response.rs
metered-api-server-2/src/data/: api_key_dto.rs  internal_server_error_dto.rs  registration_dto.rs  registration_input_dto.rs  registration_response_dto.rs
metered-api-server-2/src/db/: models.rs
metered-api-server-2/src/db/models/: api_key_row.rs
metered-api-server-2/src/handlers/: list_api_keys.rs  register.rs  welcome.rs
metered-api-server-2/src/services/: api_keys_service.rs
metered-api-server-warp/: example.env
metered-api-server/migrations/: 20250124042858_create_api_keys_table.sql
metered-api-server/src/: api.rs  handlers.rs  main.rs
metered-api-server/src/data/: api_key_query_param_dto.rs  code_run_input_dto.rs  code_run_response_dto.rs  unauthorized_dto.rs
metered-api-server/src/db/: models.rs
metered-api-server/src/db/models/: api_key_row.rs  api_request_row.rs
metered-api-server/src/handlers/: list_api_keys.rs  register.rs  run_code.rs
metered-api-server/src/services/: api_keys_service.rs  api_requests_service.rs
not-rink/: Cargo.toml
not-rink/src/: core.rs  lib.rs  main.rs  temperature.rs  time.rs
todo/: .gitignore  Cargo.toml  example.env
todo/migrations/: 20250204221910_create_todos_table.sql
todo/src/: db.rs  lib.rs  main.rs
todo/src/db/: models.rs
unit-converter/: Cargo.toml
unit-converter/src/: core.rs  lib.rs  main.rs  temperature.rs
unit-converter/unit-converter-macro/: Cargo.toml
(+10 files in other folders)
