[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
lazy_static = "1.5.0"
sqlx = { version = "0.8.3", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
