[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
derive_more = { version = "2.0.1", features = ["display"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
log = "0.4.25"
sqlx = { version = "0.8.3", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
